--- a/criarLista.html
+++ b/criarLista.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Negociações</title>
+    <title>Criar Lista</title>
     <link rel="stylesheet" href="app/css/bootstrap.css">
     <link rel="stylesheet" href="app/css/bootstrap-theme.css">
 
