Add func. btn main

--- a/main.html
+++ b/main.html
@@ -14,12 +14,13 @@
     <h1 class="text-center">Lista de Compras</h1>
 
     <div class="text-center">
-        <button class="btn btn-primary text-center" type="button" href="criarLista.html">
-            Criar
-        </button>
-        <button class="btn btn-primary text-center" type="button">
-            Pesquisar
-        </button>
+
+        <a href="criarLista.html">
+            <button class="btn btn-primary text-center" type="button">Criar</button>
+        </a>
+        <a href="listasCompras.html">
+            <button class="btn btn-primary text-center" type="button">Pesquisar</button>
+        </a>
     </div>
     <br>
     <br>
